--- a/projects/markovid/quiz/Makefile
+++ b/projects/markovid/quiz/Makefile
@@ -1,7 +1,12 @@
 CFLAGS = -Wall -fpic -coverage -lm
 
+all: testme run
+
 testme: testme.c
 	gcc -o testme testme.c $(CFLAGS)
 
+run: testme
+	./testme
+	
 clean:
 	rm -f *.o testme
